--- a/ContosoPizza/Pages/Index.cshtml
+++ b/ContosoPizza/Pages/Index.cshtml
@@ -1,10 +1,11 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "La maison des amoureux de la pizza";
+    TimeSpan timeInBusiness = DateTime.Now - new DateTime(2023, 8, 14);
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Bienvenue chez Contoso Pizza</h1>
+    <p class="lead">Les meilleures pizzas de la ville depuis @Convert.ToInt32(timeInBusiness.TotalDays) jours !</p>
 </div>
